# nebula-eye

./: .gitmodules  CMakeLists.txt  Nebula-eye-Receive.maxpat  README.md  addons.make  config.make  pd-receive.pd
nebula-eye.xcodeproj/: project.pbxproj
nebula-eye.xcodeproj/project.xcworkspace/xcshareddata/: nebula-eye.xcscmblueprint
nebula-eye.xcodeproj/project.xcworkspace/xcuserdata/antoine.xcuserdatad/: UserInterfaceState.xcuserstate
nebula-eye.xcodeproj/xcshareddata/xcschemes/: nebula-eye Debug.xcscheme  nebula-eye Release.xcscheme
src/: main.cpp  nebulaBackground.cpp  nebulaBackground.h  nebulaContourFinder.cpp  nebulaContourFinder.h  nebulaEye.cpp  nebulaFlow.cpp  nebulaFlow.h  nebulaPix_share.cpp  nebulaPix_share.h  nebulaUtils.cpp  nebulaUtils.h  nebulaVideoSrc.cpp  nebulaVideoSrc.h  nebulaZone.cpp  nebulaZone.h  ofApp.cpp  ofApp.h
